--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:mysql://localhost/todo
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=false
+spring.h2.console.enabled=false
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.hibernate.ddl-auto=update
