--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.datasource.name=todolist
 spring.datasource.url=jdbc:mysql://localhost/todo
 spring.datasource.username=root
 spring.datasource.password=root
