--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql=false
 spring.h2.console.enabled=false
 spring.jpa.defer-datasource-initialization=false
 spring.jpa.hibernate.ddl-auto=update
+
+security.jwt.secret=SECRET
+security.jwt.issuer=to-do
+security.jwt.timeMilis=3600000
+security.jwt.bearer=Bearer 
